package TOPSECRET.domain.edition;

public class EditionMagazine implements Edition {
}
