package TOPSECRET.domain.edition;

public class EditionOther {
}
