package TOPSECRET.domain.valueobject;

import TOPSECRET.ddd.ValueObject;

public class IssueNumber implements ValueObject {
}
