package TOPSECRET.domain.valueobject;

import TOPSECRET.ddd.ValueObject;

public class Periodicity implements ValueObject {
}
