package TOPSECRET.domain.valueobject;

import TOPSECRET.ddd.ValueObject;

public class Rarity implements ValueObject {
}
