@startuml

'==== Title ====
title Edition Aggregate
top to bottom direction

'==== basic style ====
skinparam monochrome false
skinparam shadowing true
skinparam defaultFontName Futura-Bold
skinparam objectFontSize 14
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ArrowColor #57595BAA
skinparam ArrowFontSize 14
skinparam PackageBorderColor #4B9DA9
' ===== Domain =====
Package "DOMAIN" {

    Package "EDITION" <<Folder>> #b0c4d4 {
        interface Edition <<Entity>> <<Root>> #lightgrey{
            -_publication : PublicationId
            -_publishingCompany : PublishingCompanyId
            -_publicationDate : LocalDate
            -_language : Language
            +getIdentifier()
            +getPublication()
            }

' ===== Implementations =====
class EditionBook <<Entity>> #lightgrey{
    -_identifier : EditionId
    -_numberOfPages : NumberOfPages
    -_editionNumber : Integer
    -_binding : Binding
}

class EditionMagazine <<Entity>> #lightgrey{
    -_identifier : EditionId
    -_issueNumber : IssueNumber
    -_periodicity : Periodicity
}

class EditionOther <<Entity>> #lightgrey{
    -_rarity : Rarity
}



interface IEditionRepo
class EditionFactory {
+ createEdition()
}
}
'== Value Objects (Ids) ==
object EditionId <<ValueObject>> #LightPink{
    + get identifier()
}

' ===== Value Objects =====
class NumberOfPages <<ValueObject>>
class Binding <<ValueObject>>
class IssueNumber <<ValueObject>>
class Periodicity <<ValueObject>>
class Rarity <<ValueObject>>
class ISBN <<ValueObject>>
class ISSN <<ValueObject>>
class NoIdentifier <<ValueObject>>


Edition "1" --> "ID 1" EditionId : has

Edition <|.. EditionBook
Edition <|.. EditionMagazine
Edition <|.. EditionOther

IEditionRepo "1" --> "*" Edition : manages

EditionBook *-- NumberOfPages : has
EditionBook *-- Binding : has

EditionMagazine *-- IssueNumber : has
EditionMagazine *-- Periodicity : has

EditionOther *-- Rarity : has

' ===== Factory =====
EditionFactory ..> Edition : <<create>>

}

EditionId <|.. ISBN
EditionId <|.. ISSN
EditionId <|.. NoIdentifier

' ===== Repository =====
object MemEditionRepo

IEditionRepo <|.. MemEditionRepo

@enduml